--- a/index.html
+++ b/index.html
@@ -413,6 +413,18 @@
           <p>Serviços em metal com reparos e confecções personalizadas para atender suas necessidades.</p>
           <a href="https://wa.me/64981226078?text=Oi,%20preciso%20de%20serralheria" target="_blank">Agendar</a>
         </div>
+        <div class="card">
+          <img src="https://raw.githubusercontent.com/Swifthubcatalao/br/main/imagens/higienizacao-ar-condicionado.jpg" alt="Higienização de Ar Condicionado">
+          <h3>Higienização de Ar Condicionado</h3>
+          <p>Mantenha seu ar condicionado limpo e livre de bactérias para um ar mais saudável e eficiente.</p>
+          <a href="https://wa.me/64981226078?text=Oi,%20preciso%20de%20higienizacao%20de%20ar%20condicionado" target="_blank">Agendar</a>
+        </div>
+        <div class="card">
+          <img src="https://raw.githubusercontent.com/Swifthubcatalao/br/main/imagens/placa-solar.jpg" alt="Placa Solar">
+          <h3>Placa Solar</h3>
+          <p>Instalação e manutenção de sistemas de energia solar para economizar e contribuir com o meio ambiente.</p>
+          <a href="https://wa.me/64981226078?text=Oi,%20preciso%20de%20servico%20em%20placa%20solar" target="_blank">Agendar</a>
+        </div>
       </div>
     </div>
   </section>
