--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
           <a href="https://wa.me/64981226078?text=Oi,%20preciso%20de%20um%20encanador" target="_blank">Agendar</a>
         </div>
         <div class="card">
-          <img src="https://raw.githubusercontent.com/Swifthubcatalao/br/main/imagens/detetizacao.jpg" alt="Detetização">
+          <img src="https://raw.githubusercontent.com/Swifthubcatalao/br/main/imagens/dedetizacao.jpg" alt="Dedetização">
           <h3>Dedetização</h3>
           <p>Elimine pragas e garanta ambientes mais seguros e limpos com serviços especializados.</p>
           <a href="https://wa.me/64981226078?text=Oi,%20preciso%20de%20dedetizacao" target="_blank">Agendar</a>
