--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
           <a href="https://wa.me/64981226078?text=Oi,%20preciso%20de%20um%20eletricista" target="_blank">Agendar</a>
         </div>
         <div class="card">
-          <img src="https://raw.githubusercontent.com/Swifthubcatalao/br/main/imagens/pintor.jpg" alt="Pintor">
+          <img src="https://raw.githubusercontent.com/Swifthubcatalao/br/main/imagens/pintor.png" alt="Pintor">
           <h3>Pintor</h3>
           <p>Pintura residencial ou comercial com acabamento de alta qualidade para renovar qualquer ambiente.</p>
           <a href="https://wa.me/64981226078?text=Oi,%20preciso%20de%20um%20pintor" target="_blank">Agendar</a>
