--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
           <a href="https://wa.me/64981226078?text=Oi,%20preciso%20de%20montagem%20de%20moveis" target="_blank">Agendar</a>
         </div>
         <div class="card">
-          <img src="https://raw.githubusercontent.com/Swifthubcatalao/br/main/imagens/limpeza-caixa-agua.jpg" alt="Limpeza de Caixa d'Água">
+          <img src="https://raw.githubusercontent.com/Swifthubcatalao/br/main/imagens/limpeza-caixa-agua.png" alt="Limpeza de Caixa d'Água">
           <h3>Limpeza de Caixa d'Água</h3>
           <p>Higienize sua caixa d'água e garanta água pura e segura para consumo.</p>
           <a href="https://wa.me/64981226078?text=Oi,%20preciso%20de%20limpeza%20de%20caixa%20da%20agua" target="_blank">Agendar</a>
@@ -414,13 +414,13 @@
           <a href="https://wa.me/64981226078?text=Oi,%20preciso%20de%20serralheria" target="_blank">Agendar</a>
         </div>
         <div class="card">
-          <img src="https://raw.githubusercontent.com/Swifthubcatalao/br/main/imagens/higienizacao-ar-condicionado.jpg" alt="Higienização de Ar Condicionado">
+          <img src="https://raw.githubusercontent.com/Swifthubcatalao/br/main/imagens/higienizacao-ar-condicionado.png" alt="Higienização de Ar Condicionado">
           <h3>Higienização de Ar Condicionado</h3>
           <p>Mantenha seu ar condicionado limpo e livre de bactérias para um ar mais saudável e eficiente.</p>
           <a href="https://wa.me/64981226078?text=Oi,%20preciso%20de%20higienizacao%20de%20ar%20condicionado" target="_blank">Agendar</a>
         </div>
         <div class="card">
-          <img src="https://raw.githubusercontent.com/Swifthubcatalao/br/main/imagens/placa-solar.jpg" alt="Placa Solar">
+          <img src="https://raw.githubusercontent.com/Swifthubcatalao/br/main/imagens/placa-solar.png" alt="Placa Solar">
           <h3>Placa Solar</h3>
           <p>Instalação e manutenção de sistemas de energia solar para economizar e contribuir com o meio ambiente.</p>
           <a href="https://wa.me/64981226078?text=Oi,%20preciso%20de%20servico%20em%20placa%20solar" target="_blank">Agendar</a>
